# f1tenth_sim_agent

./: Dockerfile  README.md  e_brake_tutorial.cpp
agent_interfaces/: CMakeLists.txt  package.xml
agent_interfaces/msg/: ScanRange.msg  WallScan.msg
safety/: CMakeLists.txt  package.xml
safety/launch/: e_brake.launch parameters.py  e_brake.launch.py
sim_agent/: CMakeLists.txt  package.xml
sim_agent/launch/: wall_follow.launch.py
sim_agent/src/: e_brake.cpp  lidar_processing.cpp  wall_follow.cpp  wall_follow_scan_tf2.cpp
utilities/: CMakeLists.txt  package.xml
utilities/src/: ParametersExplanation.cpp  ParametersExplanation.launch.py  subscriber_general.cpp  subscriber_general_parameters.cpp
